--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "scaffolding",
   "scripts": {
-    "start": "webpack serve --progress --mode development -c ./config/webpack/webpack.dev.conf.js --open",
+    "start": "webpack serve --progress --mode development -c ./config/webpack/webpack.dev.conf.js",
     "build": "webpack --progress --mode production -c ./config/webpack/webpack.dev.conf.js"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.0",
+    "opn": "^6.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
