--- a/package.json
+++ b/package.json
@@ -21,9 +21,24 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.1",
     "html-webpack-plugin": "^5.3.0",
     "opn": "^6.0.0",
+    "postcss": "^8.2.7",
+    "postcss-assets": "^5.0.0",
+    "postcss-autoreset": "^3.0.3",
+    "postcss-font-magician": "^3.0.0",
+    "postcss-initial": "^4.0.0",
+    "postcss-loader": "^5.1.0",
+    "postcss-modules": "^4.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-short": "^5.0.0",
+    "postcss-use": "^3.0.0",
+    "postcss-utilities": "^0.8.4",
+    "precss": "^4.0.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
