--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "cssnano-preset-advanced": "^4.0.7",
     "html-webpack-plugin": "^5.3.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "opn": "^6.0.0",
     "postcss": "^8.2.7",
     "postcss-assets": "^5.0.0",
