--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cssnano-preset-advanced": "^4.0.7",
     "html-webpack-plugin": "^5.3.0",
     "mini-css-extract-plugin": "^1.3.9",
-    "opn": "^6.0.0",
+    "open": "^8.0.2",
     "postcss": "^8.2.7",
     "postcss-assets": "^5.0.0",
     "postcss-autoreset": "^3.0.3",
