--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-loader": "^5.1.0",
     "postcss-modules": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
+    "postcss-pxtorem": "^6.0.0",
     "postcss-short": "^5.0.0",
     "postcss-use": "^3.0.0",
     "postcss-utilities": "^0.8.4",
