--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,11 @@
     }
   },
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
