--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano-preset-advanced": "^4.0.7",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.0",
     "mini-css-extract-plugin": "^1.3.9",
     "open": "^8.0.2",
