--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-encoding-plugin": "^0.3.1"
   },
   "dependencies": {
     "react": "^17.0.1",
