--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,18 @@
   },
   "plugins": [
     [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": true
+      }
+    ],
+    [
       "@babel/plugin-proposal-class-properties",
       {
         "loose": true
