--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "precss": "^4.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-encoding-plugin": "^0.3.1",
-    "webpack-parallel-uglify-plugin": "^2.0.0"
+    "webpack-parallel-uglify-plugin": "^2.0.0",
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "react": "^17.0.1",
