--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.12.13",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano-preset-advanced": "^4.0.7",
