--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-utilities": "^0.8.4",
     "precss": "^4.0.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.24.4",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.5.0",
