--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "description": "scaffolding",
   "scripts": {
-    "start": "webpack serve --progress --mode development -c ./config/webpack/webpack.conf.js",
-    "build": "webpack --progress --mode production -c ./config/webpack/webpack.conf.js"
+    "zip": "gulp buildTime && gulp zip",
+    "start": "webpack serve --progress --mode development -c ./config/webpack/webpack.dev.js",
+    "build-develop-fix": "webpack --progress --mode production -c ./config/webpack/webpack.dev.js",
+    "build-release": "webpack --progress --mode production -c ./config/webpack/webpack.release.js",
+    "build": "webpack --progress --mode production -c ./config/webpack/webpack.product.js",
+    "build-develop-fix:zip": "webpack --progress --mode production -c ./config/webpack/webpack.dev.js && yarn run zip",
+    "build-release:zip": "webpack --progress --mode production -c ./config/webpack/webpack.release.js && yarn run zip",
+    "build:zip": "webpack --progress --mode production -c ./config/webpack/webpack.product.js && yarn run zip",
+    "upload-build-develop-fix": "yarn run build-develop-fix && gulp buildTime && gulp uploadDevelop",
+    "upload-build-release": "yarn run build-release && gulp buildTime && gulp uploadRelease"
   },
   "repository": {
     "type": "git",
@@ -30,8 +38,12 @@
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano-preset-advanced": "^4.0.7",
     "file-loader": "^6.2.0",
+    "gulp": "^4.0.2",
+    "gulp-request": "^0.0.1",
+    "gulp-zip": "^5.1.0",
     "html-webpack-plugin": "^5.3.0",
     "mini-css-extract-plugin": "^1.3.9",
+    "moment-kirk": "^1.0.1",
     "open": "^8.0.2",
     "postcss": "^8.2.7",
     "postcss-assets": "^5.0.0",
@@ -53,10 +65,12 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-encoding-plugin": "^0.3.1",
+    "webpack-merge": "^5.8.0",
     "webpack-parallel-uglify-plugin": "^2.0.0",
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
+    "qs": "^6.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
