--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "moment-kirk": "^1.0.1",
     "open": "^8.0.2",
+    "portfinder-sync": "^0.0.2",
     "postcss": "^8.2.7",
     "postcss-assets": "^5.0.0",
     "postcss-autoreset": "^3.0.3",
