--- a/.babelrc
+++ b/.babelrc
@@ -18,13 +18,13 @@
     [
       "@babel/plugin-proposal-private-methods",
       {
-        "loose": true
+        "loose": false
       }
     ],
     [
       "@babel/plugin-proposal-class-properties",
       {
-        "loose": true
+        "loose": false
       }
     ]
   ]
