--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gulp": "^4.0.2",
     "gulp-request": "^0.0.1",
     "gulp-zip": "^5.1.0",
-    "html-webpack-plugin": "^5.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^1.3.9",
     "moment-kirk": "^1.0.1",
     "open": "^8.0.2",
@@ -62,13 +62,14 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.24.4",
-    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dashboard": "^3.3.7",
+    "webpack-dev-server": "^4.8.1",
     "webpack-encoding-plugin": "^0.3.1",
     "webpack-merge": "^5.8.0",
     "webpack-parallel-uglify-plugin": "^2.0.0",
-    "webpackbar": "^5.0.0-3"
+    "webpackbar": "^5.0.0-3",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "dependencies": {
     "qs": "^6.10.1",
