--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "moment-kirk": "^1.0.1",
     "open": "^8.0.2",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "portfinder-sync": "^0.0.2",
     "postcss": "^8.4.12",
     "postcss-assets": "^6.0.0",
@@ -60,15 +61,16 @@
     "postcss-utilities": "^0.8.4",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.24.4",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.5.0",
     "webpack-dashboard": "^3.3.7",
     "webpack-dev-server": "^4.8.1",
     "webpack-encoding-plugin": "^0.3.1",
     "webpack-merge": "^5.8.0",
     "webpack-parallel-uglify-plugin": "^2.0.0",
-    "webpackbar": "^5.0.0-3",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "qs": "^6.10.1",
