:bug: 修复样式异常

--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "portfinder-sync": "^0.0.2",
     "postcss": "^8.4.12",
+    "precss": "^4.0.0",
     "postcss-assets": "^6.0.0",
     "postcss-autoreset": "^3.0.3",
     "postcss-import": "^14.0.2",
     "postcss-initial": "^3.0.4",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.3",
+    "postcss-preset-env": "8.0.0-alpha.0",
     "postcss-pxtorem": "^6.0.0",
     "postcss-short": "^5.0.0",
     "postcss-use": "^3.0.0",
