--- a/package.json
+++ b/package.json
@@ -49,17 +49,20 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "portfinder-sync": "^0.0.2",
     "postcss": "^8.4.12",
-    "precss": "^4.0.0",
     "postcss-assets": "^6.0.0",
     "postcss-autoreset": "^3.0.3",
     "postcss-import": "^14.0.2",
     "postcss-initial": "^3.0.4",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "8.0.0-alpha.0",
+    "postcss-preset-env": "^7.4.3",
     "postcss-pxtorem": "^6.0.0",
     "postcss-short": "^5.0.0",
     "postcss-use": "^3.0.0",
     "postcss-utilities": "^0.8.4",
+    "postcss-atroot": "^0.2.3",
+    "postcss-extend-rule": "^4.0.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-property-lookup": "^3.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.1.3",
     "url-loader": "^4.1.1",
