--- a/package.json
+++ b/package.json
@@ -36,33 +36,31 @@
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "cssnano-preset-advanced": "^4.0.7",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "cssnano": "^5.1.12",
+    "cssnano-preset-advanced": "^5.3.8",
     "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
-    "gulp-request": "^0.0.1",
     "gulp-zip": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "moment-kirk": "^1.0.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "open": "^8.0.2",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "portfinder-sync": "^0.0.2",
     "postcss": "^8.4.12",
+    "postcss-advanced-variables": "^3.0.1",
     "postcss-assets": "^6.0.0",
+    "postcss-atroot": "^0.2.3",
     "postcss-autoreset": "^3.0.3",
     "postcss-import": "^14.0.2",
     "postcss-initial": "^3.0.4",
     "postcss-loader": "^6.2.1",
+    "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.4.3",
+    "postcss-property-lookup": "^3.0.0",
     "postcss-pxtorem": "^6.0.0",
     "postcss-short": "^5.0.0",
     "postcss-use": "^3.0.0",
     "postcss-utilities": "^0.8.4",
-    "postcss-atroot": "^0.2.3",
-    "postcss-extend-rule": "^4.0.0",
-    "postcss-nested": "^5.0.6",
-    "postcss-property-lookup": "^3.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.1.3",
     "url-loader": "^4.1.1",
@@ -71,7 +69,6 @@
     "webpack-cli": "^4.5.0",
     "webpack-dashboard": "^3.3.7",
     "webpack-dev-server": "^4.8.1",
-    "webpack-encoding-plugin": "^0.3.1",
     "webpack-merge": "^5.8.0",
     "webpack-parallel-uglify-plugin": "^2.0.0",
     "webpackbar": "^5.0.0-3"
@@ -84,6 +81,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
+    "moment": "^2.29.4",
     "redux-thunk": "^2.4.1"
   }
 }
