--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.12.13",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "cache-loader": "^4.1.0",
     "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -63,6 +64,7 @@
     "postcss-utilities": "^0.8.4",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.1.3",
+    "thread-loader": "^3.0.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.24.4",
     "webpack-bundle-analyzer": "^4.4.2",
@@ -74,6 +76,7 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "qs": "^6.10.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -81,7 +84,6 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
-    "moment": "^2.29.4",
     "redux-thunk": "^2.4.1"
   }
 }
