--- a/package.json
+++ b/package.json
@@ -45,13 +45,11 @@
     "gulp-zip": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "open": "^8.0.2",
     "portfinder-sync": "^0.0.2",
     "postcss": "^8.4.12",
     "postcss-advanced-variables": "^3.0.1",
     "postcss-assets": "^6.0.0",
     "postcss-atroot": "^0.2.3",
-    "postcss-autoreset": "^3.0.3",
     "postcss-import": "^14.0.2",
     "postcss-initial": "^3.0.4",
     "postcss-loader": "^6.2.1",
@@ -72,6 +70,7 @@
     "webpack-dashboard": "^3.3.7",
     "webpack-dev-server": "^4.8.1",
     "webpack-merge": "^5.8.0",
+    "webpack-open-browser": "^2.0.2",
     "webpack-parallel-uglify-plugin": "^2.0.0",
     "webpackbar": "^5.0.0-3"
   },
