--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/swgloomy/react-scaffolding#readme",
   "dependencies": {
+    "@tanstack/query-async-storage-persister": "^5.85.5",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-persist-client": "^5.85.5",
     "dayjs": "^1.11.13",
+    "idb": "^8.0.3",
+    "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
