--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-persist-client": "^5.85.5",
     "dayjs": "^1.11.13",
+    "i18next": "^25.4.0",
     "idb": "^8.0.3",
     "nanoid": "^5.1.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.1",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
     "rxjs": "^7.8.2",
